student-app-chart/templates/student-app-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app-api
spec:
  selector:
    matchLabels:
      app: student-app-api
  replicas: 1
  template:
    metadata:
      labels:
        app: student-app-api
    spec:
      containers:
        - name: student-app-api
          image: 430950558682.dkr.ecr.ap-southeast-1.amazonaws.com/devops-final-assignment-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
